# bdfkb-schema

./: .cruft.json  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  config.public.mk  index.html  mermaid.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci-validate.yaml  deploy-docs.yaml  main.yaml  pypi-publish.yaml  test_pages_build.yaml
.github/workflows_disabled/: test_pages_build.yaml
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
Tool/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
bdfkb-schema/: index.html
description/: index.html
draft/biotoolsSchema_schema/: biotoolsSchema_tool.yaml
examples/: README.md  Tool-001.yaml
examples/output/: README.md
id/: index.html
name/: index.html
project/excel/: bdf_toolbox_schema.xlsx  bdfkb_schema.xlsx
project/graphql/: bdf_toolbox_schema.graphql  bdfkb_schema.graphql
project/jsonld/: bdf_toolbox_schema.context.jsonld  bdf_toolbox_schema.jsonld  bdfkb_schema.context.jsonld  bdfkb_schema.jsonld
project/jsonschema/: bdf_toolbox_schema.schema.json  (+1 more)
search/: search_index.json
tests/: __init__.py  test_data.py
type/: index.html
wip/: README.md
(+59 files in other folders)
