[tool.poetry]
name = "bdfkb_schema"
version = "0.4.2"
description = "Schema to describe BDF Toolbox entities and the relationships between them."
authors = [
  "James Eddy <james.a.eddy@gmail.com>",
  "Matt Miller <mmiller@cra.com>",
  "Nick Alico <nalico@cra.com>",
  "Isaac Chan <ichan@cra.com>",
]
license = "Apache Software License 2.0"
readme = "README.md"
include = ["README.md", "src/bdfkb_schema/schema", "project"]

[project]
name = "bdfkb_schema"
version = "0.4.2"
description = "Schema to describe BDF Toolbox entities and the relationships between them."
authors = [
  { name = "James Eddy", email = "james.a.eddy@gmail.com" },
  { name = "Matt Miller", email = "mmiller@cra.com" },
  { name = "Nick Alico", email = "nalico@cra.com" },
  { name = "Isaac Chan", email = "ichan@cra.com" },
]
license = "Apache Software License 2.0"
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^1.1.1"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
